@@ -1390,12 +1390,8 @@ void MainWindow::toggleSystemActions(const bool value)
   ui->actionInstallLocalPackage->setEnabled(value);
   ui->actionGetNews->setEnabled(value);
   ui->actionCleanPackagesCache->setEnabled(value);
+  ui->actionSystemUpgrade->setEnabled(value);
   m_actionSwitchToRemoteSearch->setEnabled(value);
-
-  if (value == true && !state && m_outdatedStringList->count() > 0)
-    ui->actionSystemUpgrade->setEnabled(true);
-  else
-    ui->actionSystemUpgrade->setEnabled(false);
 }
 
 /*
