@@ -69,6 +69,10 @@ const QString ctn_LXDE_DESKTOP("lxsession");
 const QString ctn_LXDE_TERMINAL("lxterminal");
 const QString ctn_LXDE_FILE_MANAGER("pcmanfm");
 
+const QString ctn_GNOME_EDITOR(QStringLiteral("gedit"));
+const QString ctn_GNOME_FILE_MANAGER(QStringLiteral("nautilus"));
+const QString ctn_GNOME_TERMINAL(QStringLiteral("gnome-terminal"));
+
 const QString ctn_XDG_OPEN(QStringLiteral("xdg-open"));
 
 const QString ctn_LXQT_DESKTOP("lxqt-session");
